# alphalab

./: .env.example  .gitignore  README.md  SKELETON_GUIDE.md  TASKS.md  alembic.ini  mockup.html  pyproject.toml  render-start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_series_json.py  0efebb5f285f_add_robustness_verdict_and_stressed_.py
docs/: 00_MASTER_PLAN.md  01_ARCHITECTURE.md  02_CURRENT_STATE.md  03_NEXT_STAGE.md  SKELETON_GUIDE.md  WORKFLOW_GUIDE.md  backend-foundation.md  data-layer.md  data_layer_phase_guide.md  quant-theory.md  workflow_explanation.md
docs/adr/: ADR-001-repository-structure.md  ADR-002-documentation-policy.md  ADR-003-project-architecture.md  ADR-004-market-data-provider.md  ADR-005-duckdb.md  ADR-006-universe-abstraction.md  ADR-007-dsl-grammar.md  ADR-008-static-lookahead-checker.md  ADR-009-portfolio-construction.md  ADR-010-single-celery-queue.md  ADR-011-async-sqlalchemy-in-sync-celery.md  ADR-012-decorator-pattern-for-storage-perturbation.md  ADR-013-parameterized-engine-decoupling.md  ADR-014-experiment-result-versioning.md  ADR-015-json-artifact-storage.md
docs/audits/: 01_ARCHITECTURE_AUDIT.md  02_CODEBASE_HEALTH.md  03_DOCUMENTATION.md  04_TESTING.md  05_INTERVIEW_DEFENSE.md
internal/data/: alphalab.db
scripts/: bootstrap.py  demo_factor_backtest.py  ingest_data.py  seed_demo.py  verify_data_layer.py
src/alphalab/api/: __init__.py  main.py
src/alphalab/api/auth/: __init__.py  hash.py  jwt.py
src/alphalab/api/database/: connection.py
src/alphalab/api/models/: __init__.py  base.py  experiment.py  factor.py  results.py  user.py
src/alphalab/api/routers/: auth.py  experiments.py  factors.py  users.py
src/alphalab/common/: exceptions.py  types.py
src/alphalab/config/: settings.py
src/alphalab/data/: __init__.py  pipeline.py  transformer.py
src/alphalab/data/providers/: provider.py  yahoo_provider.py
src/alphalab/data/resources/: nifty50_history.csv
src/alphalab/data/storage/: base.py  duckdb.py  schema.py
src/alphalab/data/universe/: base.py  nifty50.py
src/alphalab/data/validation/: base.py  calendar.py  corporate_actions.py  quality.py  report.py  schema.py  suite.py
src/alphalab/dsl/: __init__.py  ast.py  compiler.py  lexer.py  parser.py  registry.py  validator.py
src/alphalab/engine/: __init__.py  evaluator.py  metrics.py  portfolio.py  robustness.py  runner.py
src/alphalab/worker/: __init__.py  celery.py  tasks.py  verdicts.py
tests/: test_package.py
tests/api/: test_auth.py  test_factors.py  test_routes.py
tests/data/: test_pipeline.py  test_transformer.py  test_universe.py  test_validation.py  test_yahoo_provider.py
tests/dsl/: test_compiler.py  test_dsl_logical.py  test_lexer.py  test_parser.py  test_validator.py
tests/engine/: test_evaluator.py  test_metrics.py  test_portfolio.py  test_robustness.py
tests/fixtures/: market_fixtures.csv
tests/worker/: test_integration_tasks.py  test_tasks.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/register/: page.tsx
web/src/app/(main)/: ClientDashboard.tsx  layout.tsx  page.tsx
web/src/app/(main)/flow/: page.tsx
web/src/app/(main)/history/: page.tsx
web/src/app/(main)/history/[id]/: AutoRefresh.tsx  ClientCharts.tsx  ClientFactorDetail.tsx  page.tsx
web/src/app/(main)/lab/: page.tsx
web/src/app/history/: page.tsx
web/src/app/history/[id]/: ClientCharts.tsx  page.tsx
web/src/app/lab/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/components/: Sidebar.tsx  TopNav.tsx
web/src/lib/: actions.ts
